Add pythonhosted:// pseudo-proto

--- a/conf/bbq.conf
+++ b/conf/bbq.conf
@@ -36,7 +36,9 @@ local conf   = {
       ['gnome://' ] = 'http://ftp.gnome.org/pub/GNOME/sources/',
       ['github://([^/]+)/([^/]+)/(.+)']     = 'https://github.com/%1/%2/archive/%3',
       ['github-rel://([^/]+)/([^/]+)/(.+)'] = 'https://github.com/%1/%2/releases/download/%3',
-      ['cpan://(.)(.)([^/]*)/(.+)']         = 'https://cpan.metacpan.org/authors/id/%1/%1%2/%1%2%3/%4'
+      ['cpan://(.)(.)([^/]*)/(.+)']         = 'https://cpan.metacpan.org/authors/id/%1/%1%2/%1%2%3/%4',
+      -- pythonhosted://<o>/<o>-<v>.tar.gz
+      ['pythonhosted://(.)([^/]+)/(.+)']    = 'https://files.pythonhosted.org/packages/source/%1/%1%2/%3'
    },
 
    categories= {
