--- a/conf/bbq.conf
+++ b/conf/bbq.conf
@@ -38,7 +38,8 @@ local conf   = {
       ['github-rel://([^/]+)/([^/]+)/(.+)'] = 'https://github.com/%1/%2/releases/download/%3',
       ['cpan://(.)(.)([^/]*)/(.+)']         = 'https://cpan.metacpan.org/authors/id/%1/%1%2/%1%2%3/%4',
       -- pythonhosted://<o>/<o>-<v>.tar.gz
-      ['pythonhosted://(.)([^/]+)/(.+)']    = 'https://files.pythonhosted.org/packages/source/%1/%1%2/%3'
+      ['pythonhosted://(.)([^/]+)/(.+)']    = 'https://files.pythonhosted.org/packages/source/%1/%1%2/%3',
+      ['google://([^/]+)/(.+)'] ='https://storage.googleapis.com/google-code-archive-downloads/v2/code.google.com/%1/%2'
    },
 
    categories= {
