Keep flags sorted

--- a/conf/bbq.conf
+++ b/conf/bbq.conf
@@ -61,16 +61,16 @@ local conf   = {
 
    flags     = {
       i486   = {
-         CFLAGS   = '-march=i486 -Os -pipe -mindirect-branch=thunk',
-         CXXFLAGS = '-march=i486 -Os -pipe -mindirect-branch=thunk',
-         CPPFLAGS = '-D_GLIBCXX_USE_C99_MATH=1',
-         LDFLAGS  = '-Wl,-Os,--as-needed'
+         {CFLAGS   = '-march=i486 -Os -pipe -mindirect-branch=thunk'},
+         {CXXFLAGS = '-march=i486 -Os -pipe -mindirect-branch=thunk'},
+         {CPPFLAGS = '-D_GLIBCXX_USE_C99_MATH=1'},
+         {LDFLAGS  = '-Wl,-Os,--as-needed'}
       },
       x86_64 = {
-         CFLAGS   = '-march=nocona -Os -pipe -mindirect-branch=thunk',
-         CXXFLAGS = '-march=nocona -Os -pipe -mindirect-branch=thunk',
-         CPPFLAGS = '-D_GLIBCXX_USE_C99_MATH=1',
-         LDFLAGS  = '-Wl,-Os,--as-needed'
+         {CFLAGS   = '-march=nocona -Os -pipe -mindirect-branch=thunk'},
+         {CXXFLAGS = '-march=nocona -Os -pipe -mindirect-branch=thunk'},
+         {CPPFLAGS = '-D_GLIBCXX_USE_C99_MATH=1'},
+         {LDFLAGS  = '-Wl,-Os,--as-needed'}
       }
    }
 
